# univ-it

android_grpc_gui/: flake.nix  pubspec.yaml
core/: pubspec.yaml
graphql_server/: pyproject.toml  schema.py  script.graphql
grpc/: pubspec.yaml
grpc_cli/: database_pb2.py  database_pb2.pyi  database_pb2_grpc.py  flake.nix  main.py
grpc_gui/: pubspec.yaml
gui/: flake.nix  pubspec.yaml
http_server/: openapi.yaml  pubspec.yaml
openapi_client/: README.md  pyproject.toml  setup.py
openapi_client/docs/: ColumnsColumnIndexBody.md  DatabasesNameBody.md  DatabasesnameColumns.md  DefaultApi.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2002.md  TableIndexColumnsBody.md  TablesTableIndexBody.md
openapi_client/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
openapi_client/swagger_client/api/: default_api.py
openapi_client/swagger_client/models/: __init__.py  columns_column_index_body.py  databases_name_body.py  databasesname_columns.py  inline_response200.py  inline_response2001.py  inline_response2002.py  table_index_columns_body.py  tables_table_index_body.py
openapi_client/test/: test_columns_column_index_body.py  test_databases_name_body.py  test_databasesname_columns.py  test_default_api.py  test_inline_response200.py  test_inline_response2001.py  test_inline_response2002.py  test_table_index_columns_body.py  test_tables_table_index_body.py
remote_client/: main.py  pyproject.toml
remote_server/: main.py  pyproject.toml
reports/: local.typ
soap_client/: main.py  pyproject.toml
soap_server/: database.wsdl  main.js  package.json
(+45 files in other folders)
