[tool.poetry]
name = "remote-client"
version = "0.1.0"
description = ""
authors = ["Nazar Vinnichuk <nazar@vinnich.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyro5 = "^5.15"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
