[tool.poetry]
name = "soap-client"
version = "0.1.0"
description = ""
authors = ["Nazar Vinnichuk <nazar@vinnich.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zeep = "^4.2.1"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
